<resources>
    <string name="app_name">앤서</string>
    <string name="label_fragment_register">회원가입</string>
    <string name="hint_input_id" >이메일 주소를 입력해주세요.</string>
    <string name="hint_input_password" >비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="register_desc">아직 계정이 없으신가요?</string>
    <string name="register">회원가입</string>
    <string name="hint_input_password_check">비밀번호 확인</string>
    <string name="member_information">회원 정보</string>
    <string name="hint_phone_number">핸드폰 번호</string>
    <string name="hint_input_name">이름</string>
    <string name="member_id_password">가입 정보</string>
    <string name="hint_nickname">닉네임</string>
    <string name="input_phone_desc" >* 이벤트당첨시 기재된 번호로 경품이 발송되니 정확히 입력해주세요.</string>
    <string name="school_information">학교 정보</string>
    <string name="interest_information">관심 사항</string>
    <string name="input_department">학과/전공을 입력해주세요.</string>
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_university">대학생</string>
    <string name="bottom_nav_official">공무원</string>
    <string name="bottom_nav_foreign_language">외국어</string>
    <string name="bottom_nav_coding">코딩</string>
    <string name="label_fragment_home">홈</string>
    <string name="label_fragment_coding">코딩</string>
    <string name="label_fragment_foreign">외국어</string>
    <string name="label_fragment_official">공무원</string>
    <string name="label_fragment_university">대학생</string>
    <string name="drawer_my_page">마이페이지</string>
    <string name="drawer_use_point" >포인트 사용</string>
    <string name="drawer_service_inquiry">서비스 문의</string>
    <string name="drawer_notice">공지사항</string>
    <string name="drawer_setting">설정</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="bottom_nav_others">더보기</string>
</resources>